# incident-duplicate-monitor

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.docx  README.md  REPORT.docx  REPORT.md  SECURITY.md  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  codeql.yml
docs/: architecture.md  dashboard_guide.md  deployment.md  maximo_oslc_methodology.md  scoring_algorithm.md  security.md
scripts/: reset_db.ps1  run_dev.ps1
src/duplicate_monitor/: __init__.py  __main__.py
src/duplicate_monitor/core/: __init__.py  config.py
src/duplicate_monitor/matching/: __init__.py  engine.py  legacy.py  normalize.py  scorer.py
src/duplicate_monitor/poller/: runner.py
src/duplicate_monitor/scanner/: __init__.py  full_scan.py
src/duplicate_monitor/sources/: __init__.py  file.py  maximo.py
src/duplicate_monitor/storage/: __init__.py  db.py  settings.py
src/duplicate_monitor/web/: app.py  auth.py
src/duplicate_monitor/web/static/bookmarklet/: install.html
tests/: conftest.py
tests/unit/: test_normalize.py  test_scorer.py
