[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "incident-duplicate-monitor"
version = "1.0.0"
description = "Live duplicate-detection service for Kidana Maximo service requests."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Kidana Operations Engineering" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Framework :: FastAPI",
    "License :: Other/Proprietary License",
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "xlrd>=2.0",
    "lxml>=5.0",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.scripts]
duplicate-monitor = "duplicate_monitor.__main__:main"

[project.urls]
Homepage = "https://github.com/GhalaMansour/incident-duplicate-monitor"
Documentation = "https://github.com/GhalaMansour/incident-duplicate-monitor/tree/main/docs"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
duplicate_monitor = [
    "web/static/**/*",
    "web/templates/**/*",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]
extend-exclude = [
    # Legacy modules carried over from the monorepo. They are functional
    # but pre-date the project's formatting standards; they remain stable
    # and are not auto-formatted until each is refactored.
    "src/duplicate_monitor/matching/legacy.py",
    "src/duplicate_monitor/web/app.py",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = [
    "E501",  # handled by line-length and formatter
    "E402",  # module-level imports must be at top; legacy ordering preserved
    "E701",  # multiple statements on one line; legacy code uses compact style
    "E702",  # multiple statements on one line (semicolon); legacy compact style
    "E741",  # ambiguous variable names; legacy code retains its variable names
    "UP007", # Optional[X] is still preferred for clarity in some signatures
    "UP045", # likewise
    "UP006", # `dict[X]` vs `Dict[X]` - allow both
    "UP042", # `class X(str, Enum)` works on every supported runtime; StrEnum is 3.11+ only
    "F841",  # unused local variables; the bulk detector creates documentation-only variables
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
# Legacy modules carried over from the monorepo. They are functional but
# pre-date the project's lint standards; they remain stable and are not
# linted aggressively until each is refactored.
"src/duplicate_monitor/matching/legacy.py" = ["ALL"]
"src/duplicate_monitor/web/app.py" = ["ALL"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_configs = true
ignore_missing_imports = true
files = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "--strict-markers -ra"
pythonpath = ["src"]
